# game_launcher

./: CMakeLists.txt  GamesCatalog.cpp  assets.qrc  background.qrc  gamedetailwindow.cpp  gamedetailwindow.h  gamedetailwindow.ui  gamescatalog.h  gamescatalog.ui  gamewindow.cpp  gamewindow.h  gamewindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  videocard.cpp  videocard.h  videocard.ui  videogame.cpp  videogame.h  videogamecard.cpp  videogamecard.h  videogamecard.ui  videoswindow.cpp  videoswindow.h  videoswindow.ui  youtubevideo.cpp  youtubevideo.h
